[package]
name = "ndhook"
version = "0.1.0"
authors = ["Will Hawkins <whh8b@obs.cr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# futures-preview = "0.3.0-alpha.19"
tide = { git = "https://github.com/http-rs/tide", rev="dfbaf72a" }
serde_json = "1.0.41"
percent-encoding = "2.1.0"
# hyper = "0.12.27"
reqwest = "0.9.22"
slog = "*"
slog-term = "2.4-2"
slog-async = "2.3.0"
tempdir = "0.3.7"
nimbledroidrs = { git = "https://github.com/hawkinsw/nimbledroidrs" }
